# Image_Processor_Cpp

./: Apply_Matrix_To_Filter.h  CMakeLists.txt  Color.cpp  Format_command.cpp  Format_command.h  README.md  image_processor.cpp
Classes_and_Functions/Apply_Matrix_To_Filter/: Apply_Matrix_To_Filter.cpp
Classes_and_Functions/Color/: Color.h
Classes_and_Functions/Image/: Image.cpp  Image.h
Filters/Crop/: Crop.cpp  Crop.h
Filters/Edge_Detection/: Edge_Detection.cpp  Edge_Detection.h
Filters/Gaussian_Blur/: Gaussian_Blur.cpp  Gaussian_Blur.h
Filters/Grayscale/: Grayscale.cpp  Grayscale.h
Filters/Negative/: Negative.cpp  Negative.h
Filters/Pixelize/: Pixelize.cpp  Pixelize.h
Filters/Sharpening/: Sharpening.cpp  Sharpening.h
